# unie-deep-learning

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/build-mkdocs/: action.yml
.github/actions/create-release/: action.yml
.github/actions/lint-code/: action.yml
.github/actions/obtain-version/: action.yml
.github/actions/security/: action.yml
.github/actions/setup-python-env/: action.yml
.github/actions/test-code/: action.yml
.github/workflows/: workflow.yaml
docs/: .nav.yml  index.md
docs/course/Computer Vision/: step_02_normalization.ipynb  step_04_shift_invariance.ipynb  step_05_scale_invariance.ipynb  step_07_vgg.ipynb  step_08_resnet.ipynb  step_09_transfer_learning.ipynb  step_10_knowledge_distillation.ipynb  step_13_vision_transformers.ipynb  step_14_interpretability.ipynb
docs/course/Generative/: step_02_diffusion_models.ipynb
docs/course/Graphs/: step_01_gnns.ipynb  step_02_pytorch_geometric.ipynb
docs/course/Mathematics/: step_01_data_structures.ipynb  step_03_mathematical_concepts.ipynb  step_05_gradient_descent.ipynb  step_06_deep_neural_networks.ipynb
docs/course/Sequential Models/: step_04_autoencoders.ipynb  step_05_transformers.ipynb  step_06_moe.ipynb  step_07_open_models.ipynb
docs/course/Time Series/: step_01_other_techniques.ipynb
docs/course/topic_01_environments/: step_02_python_libraries_oop.md
docs/course/topic_01_initial_concepts/: index.md  section_01_environment.md  section_02_data_structures.md  section_03_python_libraries_oop.md
docs/course/topic_02_mathematics/: index.md  linear_model.pth  section_01_data_structures.ipynb  section_02_basic_maths.ipynb  section_03_mathematical_concepts.ipynb  section_04_artificial_neuron.ipynb  section_05_gradient_descent.ipynb  section_08_optimizers.ipynb  step_01_data_structures.ipynb  step_03_mathematical_concepts.ipynb  step_07_regularization_techniques.ipynb  step_09_metrics.ipynb
docs/course/topic_03_applications/: section_01_artificial_neuron.ipynb  section_02_gradient_descent.ipynb  section_03_regularization_techniques.ipynb  section_04_optimizers.ipynb  section_05_model_evaluation.ipynb
docs/course/topic_03_computer_vision/: section_03_convolutional_layer.ipynb  section_05_scale_invariance.ipynb  section_06_lenet.ipynb  section_12_attention.ipynb  section_13_vision_transformers.ipynb
docs/course/topic_04_computer_vision/: index.md  section_01_image_processing.ipynb  section_02_normalization.ipynb  section_03_convolutional_layer.ipynb  section_04_lenet.ipynb  section_04_shift_invariance.ipynb  section_05_vgg.ipynb  section_06_lenet.ipynb  section_06_resnet.ipynb  section_07_transfer_learning.ipynb  section_08_autoencoders.ipynb  section_09_attention.ipynb  section_09_transfer_learning.ipynb  section_10_interpretability.ipynb  section_11_autoencoders.ipynb  section_12_attention.ipynb  section_13_vision_transformers.ipynb  section_14_interpretability.ipynb
docs/course/topic_04_sequential_models/: step_01_tokenization.ipynb  step_02_rnns.ipynb  step_03_lstm.ipynb
docs/course/topic_05_graphs_models/: index.md
docs/course/topic_05_sequential_models/: index.md  section_01_tokenization.ipynb  section_02_rnn.ipynb  section_02_rnns.ipynb  section_03_lstm.ipynb  section_04_autoencoders.ipynb  section_05_transformers.ipynb  section_06_moe.ipynb  section_07_open_models.ipynb
docs/course/topic_06_graphs_models/: section_01_gnns.ipynb  section_02_pytorch_geometric.ipynb
docs/layers/: cv.md  generative.md  nlp.md
docs/layers/computer vision/: cv.md
docs/notebooks/Computer Vision/: lenet.ipynb  step_1_image_processing.ipynb  step_2_convolutional_layer.ipynb  step_3_lenet.ipynb  step_4_vgg.ipynb  step_5_resnet.ipynb  step_6_autoencoders.ipynb  step_7_transfer_learning.ipynb  step_8_knowledge_distillation.ipynb  step_9_intepretability.ipynb  step_x_normalization.ipynb
docs/notebooks/Graphs/: step_1_gnns.ipynb  step_2_pytorch_geometric.ipynb
docs/notebooks/Mathematics/: activation_functions.ipynb  step_1_data_structures.ipynb  step_2_linear_algebra_calculus.ipynb  step_3_mathematics_concepts.ipynb  step_4_artificial_neuron.ipynb  step_5_gradient_descent.ipynb  step_6_deep_neural_networks.ipynb  step_7_regularization_techniques.ipynb  step_8_optimizers.ipynb  step_9_metrics.ipynb
docs/notebooks/Sequential Models/: step_1_rnns.ipynb  step_2_lstm.ipynb  step_3_autoencoders.ipynb  step_4_transformers.ipynb  step_5_moe.ipynb  step_6_open_models.ipynb
docs/notebooks/Time Series/: step_x_other_techniques.ipynb
docs/other_topics/: index.md
docs/other_topics/topic_01_generative_models/: section_01_gans.ipynb  section_02_diffusion_models.ipynb  step_01_gans.ipynb
docs/other_topics/topic_02_time_series_models/: section_01_other_techniques.ipynb
docs/other_topics/topic_03_others/: section_01_knowledge_distillation.ipynb  section_04_shift_invariance_cnns.ipynb  section_05_scale_invariance_cnns.ipynb  section_10_vision_transformers.ipynb  vq_vae.ipynb
docs/project/config/: config.md
docs/project/etl/: etl.md
docs/project/models/: models.md
docs/project/utils/: utils.md
docs/repo/cv/: layers.md  models.md
docs/repo/generative/: models.md
notebooks/: example_notebook.ipynb
notebooks/cv/: lenet.ipynb
notebooks/mathematics/: cosine_similarity.ipynb  gradient_descent.ipynb
notebooks/timeseries/: gramian_angular_difference_field.ipynb
scripts/: md_to_notebook.py  section_01_data_structures.md  section_04_lenet.md  section_05_vgg.md  section_06_resnet.md  section_07_optimizers.md  section_08_autoencoders.md  section_09_attention.md  section_10_interpretability.md
src/cv/: __init__.py
src/generative/: __init__.py
src/nlp/: __init__.py
v0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.1/layers/: cv.html  generative.html  nlp.html
v0.0.1/other_topics/: index.html
v0.0.1/search/: search_index.json
(+143 files in other folders)
