[project]
name = "unie-deep-learning"
version = "0.0.1"
description = "Deep learning course repository"
authors = [
    {name = "Daniel Bazo Correa", email = "none@none.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastapi[standard]==0.121.1",
    "matplotlib==3.10.8",
    "numpy==2.3.3",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchinfo==1.8.0",
    "torchvision==0.17.2",
    "tqdm==4.67.1",
]

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
pipeline = [
    "ruff==0.14.10",
    "isort==7.0.0"
]
documentation = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.30.1",
    "mkdocs-material==9.7.1",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-git-authors-plugin==0.10.0",
    "mkdocs-enumerate-headings-plugin==0.6.2",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-awesome-nav==3.2.0",
    "mike==2.1.3"
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-to-top = ["src"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
    ".venv/"
]
cache_dir = "/dev/null"

[tool.isort]
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "3pps"
import_heading_firstparty = "Own modules"
line_length = 88
