[project]
name = "unie-deep-learning"
version = "0.0.1"
description = "Deep learning course repository"
authors = [
    {name = "Daniel Bazo Correa", email = "none@none.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "deep-learning-course"]
dependencies = [
    "fastapi[standard]==0.128.0",
    "ipykernel==6.31.0",
    "matplotlib==3.10.8",
    "numpy==2.4.0",
    "opencv-python==4.11.0.86",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchinfo==1.8.0",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
]

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
environments = [
    "sys_platform == 'linux'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[dependency-groups]
pipeline = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-order==1.3.0",
    "ruff==0.14.11",
    "isort==7.0.0",
    "pre-commit==4.5.1",
]
documentation = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.0",
    "mkdocs-material==9.7.1",
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-git-authors-plugin==0.10.0",
    "mkdocs-enumerate-headings-plugin==0.6.2",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-awesome-nav==3.3.0",
    "mike==2.1.3"
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
    ".venv/"
]
cache_dir = "/dev/null"

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "3pps"
import_heading_firstparty = "Own modules"
import_heading_localfolder = "Own modules"
line_length = 88
include_trailing_comma = true
combine_as_imports = true
skip_glob = [".venv/*", ".uv-cache/*"]

[tool.deadcode]
exclude = [".venv", ".uv-cache", "tests"]
